// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Link component matches the snapshot for primary link 1`] = `
<DocumentFragment>
  <a
    class="Link primary"
  >
    Hello, I'm a primary link
  </a>
</DocumentFragment>
`;

exports[`Link component matches the snapshot for secondary link 1`] = `
<DocumentFragment>
  <a
    class="Link tertiary"
  >
    Hello, I'm a regular link
  </a>
</DocumentFragment>
`;
